--- a/DaBot.csproj
+++ b/DaBot.csproj
@@ -4,5 +4,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="VkNet" Version="1.49.0" />
+  </ItemGroup>
+
 
 </Project>
